--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </header>
         <section>
             <h1>Aimers Classes!</h1>
-            <p>Aim High, Fly Higher...</p>
+            <p>Go Confidently In The Direction Of Your Dream...</p>
         </section>
         <!-- <hr> -->
 </body>
